# django-sample-components

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/memory/: MEMORY.md  feedback_memory_location.md
demo_project/kernel/: menus.py  settings.py  urls.py  views.py
demo_project/kernel/tests/: test_async_counter.py  test_loadpage.py  test_simple_alert.py
django_sample_components/: async_urls.py  urls.py  utils.py  views.py
django_sample_components/forms/: __init__.py  registration_form.py  sum_form.py
django_sample_components/static/css/: style.css
django_sample_components/templates/django_sample_components/: home.html
django_sample_components/templatetags/: __init__.py  sample_tags.py
django_sample_components/templatetags/async_tags/: __init__.py  async_active_search.py  async_counter.py  async_dynamic_content_button.py  async_htmx_loader.py  async_lazy_load.py  async_lazy_popup.py  async_popup_registration_form.py  async_registration_form.py  async_sum_form.py
django_sample_components/urls/: __init__.py  async_urls.py  dynamic_forms_urls.py
django_sample_components/views/: __init__.py  pages.py
docs/: utils.md
docs/async/: async_active_search.md  async_counter.md  async_dynamic_content_button.md  async_htmx_loader.md  async_lazy_load.md  async_lazy_popup.md  async_popup_registration_form.md  async_registration_form.md  async_sum_form.md  base_form_component_view.md
docs/static/: greeting.md  shout.md  show_today_timestamp.md  simple_alert.md  simple_button.md  simple_modal.md  simple_popup.md  simple_toast.md  simple_typewriter.md
(+85 files in other folders)
