[project]
name = "django-sample-components"
version = "0.1.5"
description = "A handy collection of reusable Django UI components, allowing me to share and integrate elements efficiently across various projects."
authors = [
    {name = "Gustavo Rizzo S M de Albuquerque",email = "grizzo.albu@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python =  ">=3.14,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
